# epaper-dither

./: Cargo.toml  LICENSE  README.md
src/: dither.rs  image_info.rs  main.rs
