[package]
name = "epaper-dither"
description = "A tool to convert images for display on a WaveShare 5.65\" 7-color E-Paper display"
license = "MIT"
version = "0.1.0"
authors = ["Adam Lusch <alusch@gmail.com>"]
repository = "https://github.com/alusch/epaper-dither"
readme = "README.md"
edition = "2018"

[dependencies]
anyhow = "1.0.42"
argh = "0.1.5"
atoi = "0.4.0"
exoquant = "0.2.0"
image = "0.23.14"
indicatif = { version = "0.16.2", features = ["rayon"] }
itertools = "0.10.1"
lazy_static = "1.4.0"
rand = "0.8.4"
rayon = "1.5.1"
regex = "1.5.4"
structopt = "0.3.22"
wild = "2.0.4"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
